--- a/ESC2020/ESC2020/ESC2020.csproj
+++ b/ESC2020/ESC2020/ESC2020.csproj
@@ -40,6 +40,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200324103636_esc.cs" />
     <Compile Remove="Migrations\20200324103636_esc.Designer.cs" />
+    <Compile Remove="Migrations\20200324104042_esc2020.cs" />
+    <Compile Remove="Migrations\20200324104042_esc2020.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,6 +54,10 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\Model\Users.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Page-election\page-election.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
